<resources>
    <string name="app_name">Quiz</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="registration">Registration</string>
    <string name="retype_password">retype password</string>
    <string name="log_out">Log out</string>
    <string name="records">Records</string>
    <string name="start_new_session">Start new session</string>
    <string name="close">Close</string>
    <string name="correct_answers">Correct answers</string>
    <string name="incorrect_answers">Incorrect answers</string>
</resources>