<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/textColor"
        android:layout_margin="18dp"
        android:gravity="center"
    />

    <LinearLayout
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_start"
            android:background="@drawable/button_background"
            style="@style/Button"
            android:text="@string/start_new_session"
            android:textColor="@color/textColor"
            android:layout_marginBottom="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"/>

        <Button
            android:id="@+id/btn_records"
            android:background="@drawable/button_background"
            style="@style/Button"
            android:text="@string/records"
            android:textColor="@color/textColor"
            android:layout_width="300dp"
            android:layout_height="60dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:background="@drawable/button_background_danger"
        style="@style/Button"
        android:text="@string/log_out"
        android:textColor="@color/textColor"
        android:layout_marginBottom="35dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_width="300dp"
        android:layout_height="60dp"/>

</RelativeLayout>